--- a/html/frontpage/form1.html
+++ b/html/frontpage/form1.html
@@ -4,11 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Magic X Logic</title>
-
-
-    <link rel="stylesheet" href="../css/styles.css">
-    <link rel="stylesheet" href="../css/styles1.css">
+    <title>Mostrar Datos</title>
+    <link rel="stylesheet" href="../../css/front1/from2.css">
+    <link rel="stylesheet" href="../../css/front1/frommedia2.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
         integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
         crossorigin="anonymous" referrerpolicy="no-referrer">
@@ -19,7 +17,7 @@
     <header>
 
         <div class="headingTitle">
-            <a href="index.html">
+            <a href="../index.html">
                 <h1>Magic X Logic</h1>
             </a>
 
@@ -27,58 +25,44 @@
 
         <nav>
             <a href="#">INFO</a>
-            <a href="painting/galery.html">HISTORIAS</a>
-            <a href="frontpage/frontpage.html">PERSONAJES</a>
+            <a href="../painting/galery.html">HISTORIAS</a>
+            <a href="../frontpage/frontpage.html">PERSONAJES</a>
             <a href="#">AYUDAS</a>
         </nav>
 
     </header>
     <header class="headermobile">
-        <a href="index.html">
+        <a href="../index.html">
             <h1>M-X-L</h1>
         </a>
         <div class="menu-icon" onclick="toggleMenu()">☰</div>
         <nav>
             <ul id="navMenu">
                 <li><a href="#">INFO</a></li>
-                <li><a href="painting/galery.html">HISTORIAS</a></li>
-                <li><a href="frontpage/frontpage.html">PERSONAJES</a></li>
+                <li><a href="../painting/galery.html">HISTORIAS</a></li>
+                <li><a href="../frontpage/frontpage.html">PERSONAJES</a></li>
                 <li><a href="#">AYUDAS</a></li>
             </ul>
         </nav>
     </header>
 
-    <script src="../javascrip/scripfrontpage.js"></script>
+    <script src="../../javascrip/scripfrontpage.js"></script>
 
 
     <main>
-        <section>
-            <h2>Magic X Logic</h2>
-            <p>
-                Magic X Logic es un universo donde la magia y la lógica científica coexisten en un equilibrio frágil
-                y a menudo en conflicto. Este mundo está poblado por facciones que representan ambos poderes:
-            </p>
-        </section>
 
-        <section>
-            <h2>Magic</h2>
-            <p>
-                En Magic X Logic, la magia es la energía pura emanada del Vínculo Eterno, un ser multiversal que
-                conecta todas las dimensiones y seres vivos. Los Ángeles de Batalla canalizan esta magia a través de
-                un vínculo especial con espíritus mágicos, entidades que representan diversos aspectos del poder
-                cósmico.
-            </p>
-        </section>
+        <h1>Datos del Formulario</h1>
 
-        <section>
-            <h2>Logic</h2>
-            <p>
-                En Magic X Logic, la Lógica es una fuerza derivada de los conocimientos de los Locrosf, una raza
-                ancestral que dominó las leyes fundamentales del universo. Los Filósofos, guerreros de la lógica,
-                utilizan este poder gracias a un sistema de "lógica pura" transmitido por los Locrosf, permitiéndoles
-                manipular la realidad según principios científicos y matemáticos.
-            </p>
-        </section>
+        <p><strong>Nombre:</strong> <span id="nameDisplay"></span></p>
+        <p><strong>Apellido:</strong> <span id="surnameDisplay"></span></p>
+        <p><strong>Email:</strong> <span id="mailDisplay"></span></p>
+        <p><strong>Edad:</strong> <span id="yearsDisplay"></span></p>
+        <p><strong>Capítulo Seleccionado:</strong> <span id="episodeDisplay"></span></p>
+        <p><strong>Observación:</strong> <span id="observationDisplay"></span></p>
+        <p><strong>País:</strong> <span id="counstryDisplay"></span></p>
+
+        <script src="../../javascrip/forwarding.js"></script>
+
     </main>
 
     <footer>
