--- a/html/frontpage/frontpage.html
+++ b/html/frontpage/frontpage.html
@@ -8,6 +8,9 @@
 
     <link rel="stylesheet" href="../../css/front/front.css">
     <link rel="stylesheet" href="../../css/front/media-acueri-front01.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+        integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer">
 
 </head>
 
@@ -18,13 +21,14 @@
             <a href="../index.html">
                 <h1>Magic X Logic</h1>
             </a>
+
         </div>
 
         <nav>
-            <a href="#">Información</a>
-            <a href="#">Proyectos</a>
-            <a href="#">Eventos</a>
-            <a href="#">Ayudas</a>
+            <a href="#">INFO</a>
+            <a href="../painting/galery.html">HISTORIAS</a>
+            <a href="../frontpage/frontpage.html">PERSONAJES</a>
+            <a href="#">AYUDAS</a>
         </nav>
 
     </header>
@@ -35,10 +39,10 @@
         <div class="menu-icon" onclick="toggleMenu()">☰</div>
         <nav>
             <ul id="navMenu">
-                <li><a href="#">Información</a></li>
-                <li><a href="#">Proyectos</a></li>
-                <li><a href="#">Eventos</a></li>
-                <li><a href="#">Ayudas</a></li>
+                <li><a href="#">INFO</a></li>
+                <li><a href="../painting/galery.html">HISTORIAS</a></li>
+                <li><a href="../frontpage/frontpage.html">PERSONAJES</a></li>
+                <li><a href="#">AYUDAS</a></li>
             </ul>
         </nav>
     </header>
@@ -51,7 +55,7 @@
 
             <div class="painting-001">
                 <div class="paint-001">
-                    <img src="../../images/imgweb/angel001.jpeg" alt="primer-001">
+                    <img src="../../images/imgweb/angel001.jpeg" alt="first-001">
                 </div>
                 <div class="info-001">
                     <div class="text-001">
@@ -63,7 +67,7 @@
 
             <div class="painting-001">
                 <div class="paint-001">
-                    <img src="../../images/imgweb/filo002.jpeg" alt="primer-001">
+                    <img src="../../images/imgweb/filo002.jpeg" alt="first-001">
                 </div>
                 <div class="info-001">
                     <div class="text-001">
@@ -75,7 +79,7 @@
 
             <div class="painting-001">
                 <div class="paint-001">
-                    <img src="../../images/imgweb/angel002.jpeg" alt="primer-001">
+                    <img src="../../images/imgweb/angel002.jpeg" alt="first-001">
                 </div>
                 <div class="info-001">
                     <div class="text-001">
@@ -87,7 +91,7 @@
 
             <div class="painting-001">
                 <div class="paint-001">
-                    <img src="../../images/imgweb/filo001.jpeg" alt="primer-001">
+                    <img src="../../images/imgweb/filo001.jpeg" alt="first-001">
                 </div>
                 <div class="info-001">
                     <div class="text-001">
@@ -99,7 +103,7 @@
 
             <div class="painting-001">
                 <div class="paint-001">
-                    <img src="../../images/imgweb/angel003.jpeg" alt="primer-001">
+                    <img src="../../images/imgweb/angel003.jpeg" alt="first-001">
                 </div>
                 <div class="info-001">
                     <div class="text-001">
@@ -111,20 +115,7 @@
 
             <div class="painting-001">
                 <div class="paint-001">
-                    <img src="../../images/imgweb/angel004.jpeg" alt="primer-001">
-                </div>
-                <div class="info-001">
-                    <div class="text-001">
-                        <h2>Inmersión Angelical</h2>
-                        <p>No se puede atravesar el mar simplemente mirando el agua.</p>
-                    </div>
-                </div>
-            </div>
-
-
-            <div class="painting-001">
-                <div class="paint-001">
-                    <img src="../../images/imgweb/filo003.jpeg" alt="primer-001">
+                    <img src="../../images/imgweb/angel004.jpeg" alt="frist-001">
                 </div>
                 <div class="info-001">
                     <div class="text-001">
@@ -137,7 +128,7 @@
 
             <div class="painting-001">
                 <div class="paint-001">
-                    <img src="../../images/imgweb/angel005.jpeg" alt="primer-001">
+                    <img src="../../images/imgweb/filo003.jpeg" alt="first-001">
                 </div>
                 <div class="info-001">
                     <div class="text-001">
@@ -150,7 +141,7 @@
 
             <div class="painting-001">
                 <div class="paint-001">
-                    <img src="../../images/imgweb/filo004.jpeg" alt="primer-001">
+                    <img src="../../images/imgweb/angel005.jpeg" alt="first-001">
                 </div>
                 <div class="info-001">
                     <div class="text-001">
@@ -163,7 +154,20 @@
 
             <div class="painting-001">
                 <div class="paint-001">
-                    <img src="../../images/imgweb/angel006.jpeg" alt="primer-001">
+                    <img src="../../images/imgweb/filo004.jpeg" alt="first-001">
+                </div>
+                <div class="info-001">
+                    <div class="text-001">
+                        <h2>Inmersión Angelical</h2>
+                        <p>No se puede atravesar el mar simplemente mirando el agua.</p>
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="painting-001">
+                <div class="paint-001">
+                    <img src="../../images/imgweb/angel006.jpeg" alt="first-001">
                 </div>
                 <div class="info-001">
                     <div class="text-001">
@@ -176,35 +180,26 @@
         </div>
     </main>
 
-    <footer class="pie-pagina">
-        <div class="grupo-1">
-            <div class="box">
-                <figure>
-                    <a href="#">
-                        <img src="../../images/logos/logoX.png" alt="Logo de M-x-L">
-                    </a>
-                </figure>
+    <footer>
+        <div class="footerContainer">
+            <div class="socialIcons">
+                <a href=""><i class="fa-brands fa-square-facebook"></i></a>
+                <a href=""><i class="fa-brands fa-square-instagram"></i></a>
+                <a href=""><i class="fa-brands fa-x-twitter"></i></a>
+                <a href=""><i class="fa-brands fa-youtube"></i></a>
             </div>
-            <div class="box">
-                <h2>Sobre todo el proyecto</h2>
-                <p>Soy un chico pasionado por la fantacia</p>
+            <div class="footerNav">
+                <ul>
+                    <li><a href="">Casa</a></li>
+                    <li><a href="">Noticias</a></li>
+                    <li><a href="">Contacta</a></li>
+                    <li><a href="">Tienda</a></li>
+                </ul>
             </div>
-            <div class="red-socila">
-                <div>
-                    <a href="#"><img src="../../images/logos/logo.svg" alt="yotube"></a>
-                </div>
-                <div>
-                    <a href="#"><img src="../../images/logos/logo1.svg" alt="yotube"></a>
-                </div>
-                <div>
-                    <a href="#"><img src="../../images/logos/logo2.svg" alt="yotube"></a>
-                </div>
 
-            </div>
         </div>
-        <div class="grupo-2">
-            <small>&copy; 2024 <b>M-X-L</b>- Todos los Derechos Reservados</small>
-
+        <div class="footerBottom">
+            <p>© &copy;2024 M-X-L Todos los derechos reservados<span class="designer">Adrián</span></p>
         </div>
     </footer>
 
