--- a/html/painting/galery.html
+++ b/html/painting/galery.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
         integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
         crossorigin="anonymous" referrerpolicy="no-referrer">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+        integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer">
 
     <link rel="stylesheet" href="../../css/front/galery.css">
     <link rel="stylesheet" href="../../css/front/galery1.css">
@@ -23,13 +26,14 @@
             <a href="../index.html">
                 <h1>Magic X Logic</h1>
             </a>
+
         </div>
 
         <nav>
-            <a href="#">Información</a>
-            <a href="#">Proyectos</a>
-            <a href="#">Eventos</a>
-            <a href="#">Ayudas</a>
+            <a href="#">INFO</a>
+            <a href="../painting/galery.html">HISTORIAS</a>
+            <a href="../frontpage/frontpage.html">PERSONAJES</a>
+            <a href="#">AYUDAS</a>
         </nav>
 
     </header>
@@ -40,10 +44,10 @@
         <div class="menu-icon" onclick="toggleMenu()">☰</div>
         <nav>
             <ul id="navMenu">
-                <li><a href="#">Información</a></li>
-                <li><a href="#">Proyectos</a></li>
-                <li><a href="#">Eventos</a></li>
-                <li><a href="#">Ayudas</a></li>
+                <li><a href="#">INFO</a></li>
+                <li><a href="../painting/galery.html">HISTORIAS</a></li>
+                <li><a href="../frontpage/frontpage.html">PERSONAJES</a></li>
+                <li><a href="#">AYUDAS</a></li>
             </ul>
         </nav>
     </header>
@@ -68,35 +72,26 @@
         </div>
     </main>
 
-    <footer class="pie-pagina">
-        <div class="grupo-1">
-            <div class="box">
-                <figure>
-                    <a href="#">
-                        <img src="../../images/logos/logoX.png" alt="Logo de M-x-L">
-                    </a>
-                </figure>
+    <footer>
+        <div class="footerContainer">
+            <div class="socialIcons">
+                <a href=""><i class="fa-brands fa-square-facebook"></i></a>
+                <a href=""><i class="fa-brands fa-square-instagram"></i></a>
+                <a href=""><i class="fa-brands fa-x-twitter"></i></a>
+                <a href=""><i class="fa-brands fa-youtube"></i></a>
             </div>
-            <div class="box">
-                <h2>Sobre todo el proyecto</h2>
-                <p>Soy un chico pasionado por la fantacia</p>
+            <div class="footerNav">
+                <ul>
+                    <li><a href="">Casa</a></li>
+                    <li><a href="">Noticias</a></li>
+                    <li><a href="">Contacta</a></li>
+                    <li><a href="">Tienda</a></li>
+                </ul>
             </div>
-            <div class="red-socila">
-                <div>
-                    <a href="#"><img src="../../images/logos/logo.svg" alt="yotube"></a>
-                </div>
-                <div>
-                    <a href="#"><img src="../../images/logos/logo1.svg" alt="yotube"></a>
-                </div>
-                <div>
-                    <a href="#"><img src="../../images/logos/logo2.svg" alt="yotube"></a>
-                </div>
 
-            </div>
         </div>
-        <div class="grupo-2">
-            <small>&copy; 2024 <b>M-X-L</b>- Todos los Derechos Reservados</small>
-
+        <div class="footerBottom">
+            <p>© &copy;2024 M-X-L Todos los derechos reservados<span class="designer">Adrián</span></p>
         </div>
     </footer>
 
